--- a/ni.html
+++ b/ni.html
@@ -1,3 +1,2 @@
 <p>hiiiiiiiiiiii</p>
-<p>this is a new feature using git</p>
-<p>byeeeegir </p>
+<p>this is a new feature using git (buttongit branch)</p>
