--- a/ROCK-PAPER-SCISSORS/RPS.html
+++ b/ROCK-PAPER-SCISSORS/RPS.html
@@ -11,23 +11,24 @@
         <p>ROCK PAPER SCISSORS GAME</p>
     </div>
     <div class="choices">
-        <div class="choice">
-            <img src="./images/rock.png">
+        <div class="choice" data-choice="Rock">
+            <img src="./images/rock.png" alt="Rock">
         </div>
-        <div class="choice">
-            <img src="./images/paper.png">
+        <div class="choice" data-choice="Paper">
+            <img src="./images/paper.png" alt="Paper">
         </div>
-        <div class="choice">
-            <img src="./images/scissors.png">
+        <div class="choice" data-choice="Scissors">
+            <img src="./images/scissors.png" alt="Scissors">
         </div>
     </div>
+    
     <div class="scoreBoard">
         <div class="you">
-            <p class="score">0</p>
+            <p class="youscorenum">0</p>
             <p>You</p>
         </div>
         <div class="comp">
-            <p class="score">0</p>
+            <p class="compscorenum">0</p>
             <p>Comp</p>
         </div>
     </div>
